# simdref

./: .coverage  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  README.md  install.sh  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build-data.yml  bump-version.yml  ci.yml  cleanup.yml  coverage.yml  nightly-coverage.yml  nightly-testpypi.yml  pages.yml  release-candidate.yml  release.yml  testpypi.yml  validate-release-assets.yml  vscode.yml
codex-skills/asm-analysis/.codex-plugin/: plugin.json
docs/: LLM.md  SOURCES.md  adding-pdf-source.md
docs/coverage/: summary.json  thresholds.toml
docs/superpowers/plans/: 2026-04-10-pdf-description-parsing.md
docs/superpowers/specs/: 2026-04-10-pdf-description-parsing-design.md  2026-04-20-arm-riscv-perf-integration-design.md
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
hooks/: hooks.json
scripts/: build_skill_bundles.py  bump-version.py  check-version-sync.py  gen-screenshots.py
skill/: SKILL.md
skill/frontmatter/: claude.yaml  codex.yaml
skill/install/: claude.md  codex.md
skills/asm-analysis/: SKILL.md
skills/asm-analysis/references/: workflow.md
src/simdref/: __init__.py  __main__.py  _version.py  annotate.py  arm_instructions.py  cli.py  display.py  filters.py  ingest.py  ingest_catalog.py  ingest_pdf.py  ingest_sources.py  lsp.py  manpages.py  models.py  pdfrefs.py  perf.py  queries.py  riscv.py  search.py  storage.py  tui.py  ui_labels.py  web.py
src/simdref/fixtures/: __init__.py  arm_a64_instructions_sample.json  intel_intrinsics_sample.json  riscv_rvv_intrinsics_sample.json  riscv_unified_db_sample.json  uops_sample.xml
src/simdref/pdfparse/: __init__.py  base.py  intel.py  registry.py  types.py
src/simdref/perf_sources/: __init__.py  cores.py  llvm_mca.py  llvm_scheduling.py  merge.py  osaca.py  rvv_bench.py
src/simdref/profile/: __init__.py  hotloop.py  merge.py  model.py  orchestrate.py  registry.py
src/simdref/templates/: app.js  index.html  style.css
tests/: conftest.py  test_annotate.py  test_audit_coverage.py  test_auto_update_on_version_change.py  test_cli_bare_query.py  test_cli_bootstrap_progress.py  test_cli_help.py  test_cli_llm.py  test_cli_show.py  test_coverage_live.py  test_coverage_parity.py  test_display.py  test_filters.py  test_ingest_sources.py  test_intel_operation_and_url.py  test_issue2_fixes.py  test_lsp_web.py  test_models.py  test_pdfparse.py  test_perf.py  test_perf_sources.py  test_presentation.py  test_preset_persistence.py  test_search.py  test_search_pushdown.py  test_source_kind_filter.py  test_source_validation.py  test_storage_schema.py  test_tui.py  test_ui_labels_parity.py  test_x86_linking.py
tests/fixtures/: arm_acle_intrinsics_sample.json  hello_simd.s
tests/profile/: test_annotate_positions.py  test_hotloop.py  test_merge.py  test_perf_adapter.py
tools/: audit_coverage.py  perf_baseline.md  profile_web.py  validate_sources.py  vendor_riscv_sources.py
(+12 files in other folders)
